alteração para compartilhamento se tornar uma API e compartilhar o algoritmo